--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <title>Url Shortener Microservice</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://unpkg.com/react@15/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
+    <script src="/app.js"></script>
+    <script src="style.css"></script>
   </head>
   <body>
-   <h1>Url Shortener Microservice</h1>
-   <h3> Example usage:</h3>
-   <p>url/www.google.com</p>
-   <p>url/facebook.com</p>
-   <h3> Example output </h3>
-   <p>url/34y</p>
+      <main class="jumbotron" id="app">
+      </main>
+      <footer id="footer">
+      </footer>
   </body>
 </html>
