--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.25.0/babel.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.js"></script>
-  <link rel="stylesheet" src="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/babel" src="/app.js"></script>
 </head>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/sass/style.css">
   <body>
       <main class="jumbotron" id="app">
       </main>
