--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/babel" src="/app.js"></script>
 </head>
-  <link rel="stylesheet" href="/sass/style.css">
+  <link rel="stylesheet" href="/stylesheet/style.css">
   <body>
       <main class="jumbotron" id="app">
       </main>
